# Aurora

./: .env.example  .gitignore  APPLY_INSTRUCTIONS.md  BUILD_TEST_REPORT.json  CHANGELOG.md  CHANGELOG_M2-002_append.md  CONTRIBUTING.md  CORE_SCHEMA_DIFF_REPORT.json  DECISIONS.md  DECISIONS_M2-002_append.md  M2-002_交付说明.md  MANIFEST.txt  PATCH_BASELINE.md  PATCH_FILE_LIST.json  PERFORMANCE_OBSERVATIONS.json  README.md  README_M2-002.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SHA256SUMS.txt  alembic.ini  pyproject.toml
.github/workflows/: permission-check.yml  quality-gate.yml
Aurora_GitHub_项目骨架_V1.0/: GITHUB_SETUP.md  LICENSE.md  README.md  pyproject.toml
Aurora_GitHub_项目骨架_V1.0/data/: README.md
Aurora_GitHub_项目骨架_V1.0/deployments/: README.md
Aurora_GitHub_项目骨架_V1.0/docs/: README.md
Aurora_GitHub_项目骨架_V1.0/docs/00_project/: 02_Aurora_项目全流程路线图与阶段核查清单_V1.0.md  README.md
Aurora_GitHub_项目骨架_V1.0/docs/01_requirements/: 01_用户场景与需求分析.md  02_MVP用户旅程.md  03_需求优先级矩阵.md
Aurora_GitHub_项目骨架_V1.0/docs/02_architecture/: 02_系统边界与术语表.md  03_核心数据流.md
Aurora_GitHub_项目骨架_V1.0/docs/03_data_model/: 01_核心对象模型与知识标准.md
Aurora_GitHub_项目骨架_V1.0/docs/04_engines/: 02_解析引擎_Parser.md
Aurora_GitHub_项目骨架_V1.0/docs/05_integrations/AIResearch/: README.md
Aurora_GitHub_项目骨架_V1.0/docs/06_operations/: 02_备份与恢复.md
Aurora_GitHub_项目骨架_V1.0/examples/: README.md
Aurora_GitHub_项目骨架_V1.0/prompts/: README.md
Aurora_GitHub_项目骨架_V1.0/scripts/: README.md
alembic/: env.py
alembic/versions/: 20260712_0002_add_schema_version_index.py
apps/: README.md
data/: dry_run.json
data/qa/: migration_dry_run.json  migration_result.json  restore_result.json
docs/: M1-001_BUILD_TEST_REPORT.json  M1-001_交付说明.md  M1-003A_交付说明.md  M1-003B_交付说明.md  M1_Exit与M2启动_交付说明.md  OPTIMIZATIONS.md  README.md
docs/00_project/: 03_Aurora_项目总进度与资源看板_V1.0.md  03_Aurora_项目总进度与资源看板_V1.1.md  03_Aurora_项目总进度与资源看板_V1.2.md  03_Aurora_项目总进度与资源看板_V1.3.md  03_Aurora_项目总进度与资源看板_V1.4.md  03_Aurora_项目总进度与资源看板_V1.5.md  03_Aurora_项目总进度与资源看板_V1.6.md  03_Aurora_项目总进度与资源看板_V1.7.md  04_Aurora_双助手协作协议_V1.0.md  05_Aurora_待优化事项清单_V1.0.md  05_Aurora_待优化事项清单_V1.1.md  05_Aurora_待优化事项清单_V1.2.md  05_Aurora_待优化事项清单_V1.3.md  05_Aurora_待优化事项清单_V1.4.md  05_Aurora_待优化事项清单_V1.5.md  05_Aurora_待优化事项清单_V1.6.md  05_Aurora_待优化事项清单_V1.7.md  06_Aurora_协作与评审规范_V2.1.md  06_M1_Exit_Review_正式版_V1.0.md  06_M1_Exit_Review_草案_V1.0.md  (+4 more)
schemas/: registry.json
scripts/: benchmark_m2_002.py  export_ingestion_schemas.py  gate0_check.py  gate1_check.py  seed_v1_0_for_migration.py
临时文件/: 14_M2-003B_真实垂直切片与Gate1_Issue_V1.0.md  18_OPT-073_M2.1_Persistence_Boundary_Hardening_V1.0.md  19_Gate4_Polaris_Minimum_Closed_Loop_V1.0.md  20260715_M2-003C_Gate3_Review_Round2_大G复核_V1.0.md  20260715_M2-003C_Gate3_Round1修复实施指令_V1.0.md  20260715_M2-003C_Gate3_Round2_Closure_Verification_V1.0.md  20260715_M2-003C_Gate3_Round3_Closure_Verification_V1.0.md  README.md
原始文件/: Aurora_核心对象模型与知识标准_V1.0.md  Aurora_核心理念与认知闭环设计_V1.0.md
(+344 files in other folders)
