[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-intelligence-platform"
version = "0.5.0"
description = "Personal Cognitive Augmentation and Knowledge Operating System"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Aurora Project" }]
dependencies = [
  "pydantic>=2.7,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=5.0,<7.0",
  "jsonschema>=4.22,<5.0",
  "reportlab>=4.0,<5.0",
]
parsers = [
  "beautifulsoup4>=4.12,<5.0",
  "lxml>=5.0,<7.0",
  "httpx>=0.27,<1.0",
  "pdfplumber>=0.11,<1.0",
  "webvtt-py>=0.5,<1.0",
]

[project.scripts]
aurora-export-schemas = "aurora.core.schema_registry:main"
aurora-migrate-payloads = "aurora.cli.migrate_payloads:main"
aurora-restore-payloads = "aurora.cli.restore_payloads:main"
aurora-ingest = "aurora.cli.ingest:main"
aurora-export-ingestion-schemas = "aurora.ingestion.schema_registry:main"
aurora-extract = "aurora.cli.extract:main"
aurora-review = "aurora.cli.extract:review_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
source = ["aurora"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
